--- a/themes/icarus-2.6.0/layout/common/article.ejs
+++ b/themes/icarus-2.6.0/layout/common/article.ejs
@@ -49,12 +49,13 @@
             <%- index && post.excerpt ? post.excerpt : post.content %>
         </div>
 
-        <% if (!post.excerpt) { %>
-            <div class="post-copyright">
+        <% if (!(index && post.excerpt)) { %>
+        <div class="post-copyright">
             <p><strong>作者: </strong> zsh2401 <br/>
             <strong>版权声明:</strong> 本博客所有文章除特别声明外，均采用 BY-NC-SA 许可协议。转载请注明出处！
             </p>
         </div>
+        
         <style>
             .post-copyright{
                 margin: 2em 0 0;
@@ -84,7 +85,7 @@
         <div class="level is-mobile">
             <div class="level-start">
                 <div class="level-item">
-                <a class="button is-size-7 is-light" href="<%- url_for(post.path) %>#more"><%= __('article.more') %></a>
+                <a class="button is-size-7 is-light" href="<%- url_for(post.path) %>"><%= __('article.more') %></a>
                 </div>
             </div>
         </div>
