--- a/themes/icarus-2.6.0/source/css/style.styl
+++ b/themes/icarus-2.6.0/source/css/style.styl
@@ -12,6 +12,8 @@ screen-fullhd = 1472px
 html
     font-size: 14px
 
+audio 
+    height: 54px; !important
 body
     background-color: #f7f7f7
 
@@ -327,7 +329,7 @@ img.thumbnail
  * --------------------------------- */
 .content
     h1, h2, h3, h4, h5, h6
-        font-weight: 400
+        font-weight: bold
     h1
         font-size: 1.75em
     h2
