--- a/themes/icarus-2.6.0/layout/common/footer.ejs
+++ b/themes/icarus-2.6.0/layout/common/footer.ejs
@@ -9,38 +9,54 @@
                     <img src="<%- url_for(logo) %>" alt="<%= title %>" height="28">
                 <% } %>
                 </a> -->
+                <div style="width:300px;margin:0 auto; padding:10px 0;">
+                    <img src="/images/beian/gongan.png">
+                    <a target="_blank"
+                        href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=53018102000119"
+                        style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src=""
+                            style="float:left;" />
+                        <p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#939393;">滇公网安备
+                            53018102000119号</p>
+                    </a>
+                </div>
                 <p class="is-size-7">
-                <a target="_blank" href="http://www.beian.miit.gov.cn/">滇ICP备19011321号</a><br/>
-                &copy; 2016 - <%= date(new Date(), 'YYYY') %> <%= author || title %>&nbsp;
-                Powered by <a href="https://hexo.io/" target="_blank" rel="noopener">Hexo</a> & <a
+                    <a target="_blank" href="http://www.beian.miit.gov.cn/">滇ICP备19011321号</a><br />
+                    &copy; 2016 - <%= date(new Date(), 'YYYY') %> <%= author || title %>&nbsp;
+                    Powered by <a href="https://hexo.io/" target="_blank" rel="noopener">Hexo</a> & <a
                         href="https://github.com/ppoffice/hexo-theme-icarus" target="_blank" rel="noopener">Icarus</a>
-                <% if (busuanzi) { %>
-                <br>
-                <span id="busuanzi_container_site_uv">
-                <%- _p('plugin.visitor', '<span id="busuanzi_value_site_uv">0</span>') %>
-                </span>
-                <% } %>
-                
+                    <% if (busuanzi) { %>
+                    <br>
+                    <span id="busuanzi_container_site_uv">
+                        <%- _p('plugin.visitor', '<span id="busuanzi_value_site_uv">0</span>') %>
+                    </span>
+                    <% } %>
+
                 </p>
-                <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1272907019'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s19.cnzz.com/z_stat.php%3Fid%3D1272907019%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+                <script
+                    type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://"); document.write(unescape("%3Cspan id='cnzz_stat_icon_1272907019'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s19.cnzz.com/z_stat.php%3Fid%3D1272907019%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+
+
+
             </div>
             <div class="level-end">
-            <% if (Object.keys(links).length) { %>
+                <% if (Object.keys(links).length) { %>
                 <div class="field has-addons is-flex-center-mobile has-mt-5-mobile is-flex-wrap is-flex-middle">
-                <% for (let name in links) {
+                    <% for (let name in links) {
                         let link = links[name]; %>
-                <p class="control">
-                    <a class="button is-white <%= typeof(link) !== 'string' ? 'is-large' : '' %>" target="_blank" rel="noopener" title="<%= name %>" href="<%= url_for(typeof(link) === 'string' ? link : link.url) %>">
-                        <% if (typeof(link) === 'string') { %>
-                        <%= name %>
-                        <% } else { %>
-                        <i class="<%= link.icon %>"></i>
-                        <% } %>
-                    </a>
-                </p>
-                <% } %>
+                    <p class="control">
+                        <a class="button is-white <%= typeof(link) !== 'string' ? 'is-large' : '' %>" target="_blank"
+                            rel="noopener" title="<%= name %>"
+                            href="<%= url_for(typeof(link) === 'string' ? link : link.url) %>">
+                            <% if (typeof(link) === 'string') { %>
+                            <%= name %>
+                            <% } else { %>
+                            <i class="<%= link.icon %>"></i>
+                            <% } %>
+                        </a>
+                    </p>
+                    <% } %>
                 </div>
-            <% } %>
+                <% } %>
             </div>
         </div>
     </div>
